Updated a few things, made things look prettier.

--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -1,7 +1,6 @@
 <div class="hero">
 	<div class="hero-inner">
-    <a href="" class="hero-logo"><img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png
-" alt="Logo Image"></a>
+    <a href="" class="hero-logo"><img src="/res/img/ir_attachment_300.png" alt="Logo Image"></a>
 		<div class="hero-copy">
 			<h1>Welcome to Coventry Pokemon League</h1>
 			<p>The only <strong>Officially Sanctioned</strong> Pokemon League in <strong>Coventry, West Midlands</strong></p>	
